fixing overflow-x

--- a/el-kindy-frontEnd/src/index.css
+++ b/el-kindy-frontEnd/src/index.css
@@ -30,6 +30,7 @@ html {
 body {
   font-family: "nunito", sans-serif !important;
   background-color: #e9f6ff;
+  overflow-x: hidden;
 }
 
 /* @media (min-width: 1800px) {
